# CSU_APP

./: .env.example  .env.production  .gitignore  Makefile  PYTHONANYWHERE_DEPLOYMENT.md  Procfile  README.md  _run_profiling.py  _set_test_pw.py  conftest.py  create_icons.py  docker-compose.yml  generate_icons.py  generate_vapid.py  profile_request.py  pyproject.toml  requirements.txt  tailwind.config.js  test_desktop_layout.py
.github/agents/: Backend.agent.md  UI.agent.md  my-agent.agent.md
accounts/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_profile_fields.py  0003_add_onboarding_fields.py  0004_mark_existing_users_onboarded.py  0005_add_treatment_models.py  0006_add_privacy_consent_fields.py  0007_add_date_of_birth.py  0008_change_default_timezone_to_london.py  0009_encrypt_profile_fields.py  0010_mfa_and_password_reset.py  0011_account_pause.py  0012_rename_accounts_pa_user_id_6a1d8b_idx_accounts_pa_user_id_fc5b76_idx_and_more.py
audit/: __init__.py  admin.py  apps.py  models.py  utils.py
audit/migrations/: 0001_initial.py
backups/: __init__.py  admin.py  apps.py  models.py  tasks.py
core/: __init__.py  asgi.py  cache.py  celery.py  context_processors.py  fields.py  middleware.py  security.py  settings.py  urls.py  validators.py  wsgi.py
docs/: DATA_BREACH_RESPONSE_PLAN.md  DATA_PROCESSING_REGISTER.md  DPA_SECURITY_AUDIT.md  DPIA.md  DPO_ROLE_DOCUMENTATION.md  PROCESSOR_AGREEMENTS.md  STAFF_TRAINING_PROGRAM.md  SUBSCRIPTION_STRATEGY.md
notifications/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  push.py  serializers.py  tasks.py  urls.py  views.py
reporting/: __init__.py  admin.py  apps.py  models.py  tasks.py
scripts/: dev.sh  reminder_daemon.py  secure_backup.py  security_check.py  setup.sh
sharing/: __init__.py  admin.py  apps.py  models.py
static/: sw.js
subscriptions/: __init__.py  admin.py  apps.py  entitlements.py  models.py  signals.py  urls.py  views.py
templates/: base.html  base_desktop.html  base_new.html
tests/: test_accounts.py  test_injection_reminders.py  test_notifications.py  test_security.py  test_subscriptions.py  test_tracking.py
tracking/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  diagnostics.py  exports.py  forms.py  home_urls.py  models.py  serializers.py  urls.py  utils.py  views.py
(+84 files in other folders)
