[project]
name = "csu-tracker"
version = "0.1.0"
description = "Chronic Spontaneous Urticaria (CSU) tracking web application"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CSU Tracker Team", email = "team@example.com"}
]
dependencies = [
    # Django core
    "django>=5.0,<6.0",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.3.0",
    
    # Database
    "psycopg[binary]>=3.1.0",
    "dj-database-url>=2.1.0",
    
    # Environment & Configuration
    "django-environ>=0.11.0",
    
    # Background Tasks
    "celery[redis]>=5.3.0",
    "django-celery-beat>=2.5.0",
    "redis>=5.0.0",
    
    # Web Push
    "pywebpush>=1.14.0",
    "py-vapid>=1.9.0",
    
    # Security & Utils
    "django-cors-headers>=4.3.0",
    "whitenoise>=6.6.0",
    
    # Timezone handling
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "accounts", "tracking", "notifications"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["accounts", "tracking", "notifications", "core"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "security: marks tests as security-related",
]

[tool.coverage.run]
source = ["accounts", "tracking", "notifications", "core"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "manage.py",
    "conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 50
show_missing = true
